# zhaoxinzheng-opengl

./: CMakeLists.txt  README.md  main.cpp
assets/shaders/: cloud.frag  cloud.vert  grassInstance.frag  screen.frag
glframework/: geometry.cpp  geometry.h  object.cpp  texture.cpp
glframework/material/: cloudMaterial.cpp  cloudMaterial.h  grassInstanceMaterial.h  material.h
glframework/mesh/: instancedMesh.cpp
glframework/renderer/: renderer.cpp  renderer.h
